# Autonomous-Warehouse-Forklift

./: .gitignore  README.md  test.py
.github/: run-python.yml
.github/workflows/: main.yml
config/: aruco_map.yaml
docs/: architecture.md  theory.md  tuning_guide.md
scripts/: test_straight.py
simulation/: ekf_sim.py
src/: ros2_service_client.py  ros2_service_server.py
src/botoni_main/: README.md  package.xml  setup.py
src/botoni_main/botoni_main/: FSMPanel.jsx  botoni_fsm_node.py  useFSM.js
src/botoni_main/launch/: botoni_main.launch.py
src/botoni_ui/: README.md  package.xml  setup.cfg  setup.py
src/botoni_ui/botoni_ui/: ngrok_node.py  web_server.py
src/botoni_ui/launch/: botoni_ui.launch.py
src/botoni_ui/web/: index_landscape.html  mobile.html
src/logo_detection/: package.xml  setup.cfg  setup.py
src/logo_detection/logo_detection/: logo_detection.py
src/nav_pkg/: package.xml  setup.py
src/nav_pkg/nav_pkg/: astar.py  dwa.py  dwa_debug.py  lidar_visualize.py  nav_node.py  nav_node_bug2.py  nav_node_pb.py  nav_node_sim.py  nav_node_simple.py  robot_viz.py  vel_test.py
src/puzzlebot_ros/: package.xml  setup.py
src/puzzlebot_ros/puzzlebot_ros/: aruco_detector.py  aruco_detector_sim.py  door_align.py  goto_point.py  kalman.py  mission_manager.py  my_math.py  poseKalman.py  poseKalmanSim.py  qr_alignment_node.py  qr_detector.py  qr_geometry.py
src/slam_pkg/: package.xml  setup.py
src/slam_pkg/aruco_models/: e80.world
src/slam_pkg/launch/: mr_cam.launch.py  test.launch.py
src/voice_commands/: package.xml  setup.cfg  setup.py
(+321 files in other folders)
