<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>botoni_ui</name>
  <version>0.1.0</version>
  <description>Interfaz web del montacargas Botoni (Roboarena 4.0). Sirve el dashboard y levanta rosbridge + web_video_server.</description>
  <maintainer email="rodz@roboarena.local">Maje</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>web_video_server</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
